--- a/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson4.html
+++ b/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson4.html
@@ -892,37 +892,224 @@
                 <h2 class="section-title">学習目標</h2>
                 <p class="section-description">以下のプロンプトをコピーして、<a href="https://studio.workspace.google.com/" target="_blank" style="color: var(--accent-primary); text-decoration: underline;">Google Workspace Studio</a> で実行すると、このレッスンのエージェントを自動生成できます。</p>
             </div>
+            <div class="highlight-box" style="margin-bottom: 2rem;">
+                <p><strong>デモ推奨:</strong> 4つのエージェントのうち「未提出チェック」がデモに最適です。理由：<br>
+                1. <strong>Scheduledスターター</strong> - Lesson 1-3はChat受信トリガーでしたが、時間トリガーは新しい学び<br>
+                2. <strong>Sheetsからデータ読み込み</strong> - これまでは書き込みのみでしたが、読み込んで処理するのは新しい<br>
+                3. <strong>シンプルで再現しやすい</strong> - 2つのシートを用意すればすぐテスト可能</p>
+            </div>
+
+            <h3 style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--accent-primary);">エージェント1: 未提出チェック（デモ推奨）</h3>
             <div class="code-block-wrapper">
                 <div class="copy-hint">クリックでコピー</div>
-                <div class="code-block" onclick="copyToClipboard(this)">進捗ダッシュボード用の4つのエージェントを作成してください。
+                <div class="code-block" onclick="copyToClipboard(this)">未提出チェックエージェントを作成してください。
 
-【エージェント1: 未提出チェック】
-- 名前: 未提出チェック
-- スターター: Scheduled（毎日20:00）
-- 処理: Sheetsから提出ログとメンバーマスタを読み込み、Geminiで未提出者を検知
-- 出力: 未提出者がいる場合、Chat DMで自分に通知
+【エージェント名】
+未提出チェック
 
-【エージェント2: ダッシュボード更新】
-- 名前: ダッシュボード更新
-- スターター: Scheduled（毎日21:00）
-- 処理: 提出ログシートから本日のデータを集計
-- 出力: ダッシュボードシートを更新（提出数、提出率、未提出者数）
+【説明】
+毎日20:00にスプレッドシートをチェックし、日報未提出者を検知して通知
 
-【エージェント3: 週次サマリー】
-- 名前: 週次サマリー
-- スターター: Scheduled（金曜18:00）
-- 処理: Geminiで今週の提出データを分析、提出率ランキング・改善提案を生成
-- 出力: Chat DMで自分に週次レポートを通知
+【スターター】
+Scheduled（スケジュール）- 毎日20:00
 
-【エージェント4: Drive Sync】
-- 説明: 既存のReport Summary/Quality Check Agentに添付ファイル保存アクションを追加
-- 処理: 添付ファイルをDriveの「日報週報/年/月」フォルダに自動保存
-- 出力: 提出ログシートにDriveリンクを記録
+【処理フロー】
+1. Sheetsステップ（メンバーマスタ読み込み）:
+   - スプレッドシート: 日報管理シート
+   - シート: メンバーマスタ
+   - 操作: 全行を取得
+   - 取得列: 名前, メールアドレス, 部署
 
-これらのエージェントを作成してください。</div>
+2. Sheetsステップ（本日の提出ログ読み込み）:
+   - スプレッドシート: 日報管理シート
+   - シート: 提出ログ
+   - 操作: フィルターして取得
+   - フィルター: 日付 = 本日
+
+3. Geminiステップ（未提出者の検知）:
+   メンバーマスタと本日の提出ログを比較し、未提出者を特定してください。
+
+   入力データ:
+   - メンバーマスタ: {members_data}
+   - 本日の提出ログ: {today_submissions}
+   - 本日の日付: {current_date}
+
+   出力形式:
+   - 未提出者リスト（名前、部署）
+   - 提出済み人数 / 全体人数
+   - 提出率（%）
+
+4. 条件分岐ステップ:
+   - 未提出者がいる場合 → Chat DM通知へ
+   - 全員提出済みの場合 → 処理終了
+
+5. Chat DMステップ:
+   - 自分へ未提出者リストと提出率を通知
+
+【出力先】
+- Chat DM（自分へ通知）
+
+【事前準備】
+1. 日報管理シートに「メンバーマスタ」シートを作成（列: 名前, メールアドレス, 部署）
+2. 日報管理シートに「提出ログ」シートを作成（列: 日付, 名前, 提出時刻, ステータス）
+3. テスト用にメンバー3-5名分のダミーデータを登録
+
+このエージェントを作成してください。</div>
             </div>
-            <div class="warning-box" style="margin-top: 1rem;">
-                <p><strong>ポイント:</strong> 上記プロンプトをコピーして <a href="https://studio.workspace.google.com/" target="_blank" style="color: #78350f; text-decoration: underline;">Google Workspace Studio</a> に貼り付けると、エージェントのベースが自動生成されます。</p>
+
+            <h3 style="font-size: 1.1rem; margin: 2rem 0 1rem; color: var(--text-secondary);">エージェント2: ダッシュボード更新</h3>
+            <div class="code-block-wrapper">
+                <div class="copy-hint">クリックでコピー</div>
+                <div class="code-block" onclick="copyToClipboard(this)">ダッシュボード更新エージェントを作成してください。
+
+【エージェント名】
+ダッシュボード更新
+
+【説明】
+毎日21:00に本日の提出データを集計し、ダッシュボードシートを自動更新
+
+【スターター】
+Scheduled（スケジュール）- 毎日21:00
+
+【処理フロー】
+1. Sheetsステップ（提出ログ読み込み）:
+   - スプレッドシート: 日報管理シート
+   - シート: 提出ログ
+   - 操作: フィルターして取得
+   - フィルター: 日付 = 本日
+
+2. Sheetsステップ（メンバーマスタ読み込み）:
+   - シート: メンバーマスタ
+   - 操作: 行数をカウント（全メンバー数を取得）
+
+3. Geminiステップ（集計）:
+   本日の提出データを集計してください。
+
+   入力:
+   - 本日の提出ログ: {today_submissions}
+   - 全メンバー数: {total_members}
+
+   出力:
+   - 提出数
+   - 提出率（%）
+   - 未提出者数
+   - 平均提出時刻
+
+4. 抽出ステップ:
+   - submission_count: 提出数
+   - submission_rate: 提出率
+   - missing_count: 未提出者数
+
+5. Sheetsステップ（ダッシュボード更新）:
+   - シート: ダッシュボード
+   - 操作: 行を追加
+   - データ: 日付, 提出数, 提出率, 未提出者数
+
+【出力先】
+- Sheets（ダッシュボードシート）
+
+このエージェントを作成してください。</div>
+            </div>
+
+            <h3 style="font-size: 1.1rem; margin: 2rem 0 1rem; color: var(--text-secondary);">エージェント3: 週次サマリー</h3>
+            <div class="code-block-wrapper">
+                <div class="copy-hint">クリックでコピー</div>
+                <div class="code-block" onclick="copyToClipboard(this)">週次サマリーエージェントを作成してください。
+
+【エージェント名】
+週次サマリー
+
+【説明】
+毎週金曜18:00に今週の提出データを分析し、週次レポートを生成
+
+【スターター】
+Scheduled（スケジュール）- 毎週金曜日 18:00
+
+【処理フロー】
+1. Sheetsステップ（今週の提出ログ読み込み）:
+   - スプレッドシート: 日報管理シート
+   - シート: 提出ログ
+   - 操作: フィルターして取得
+   - フィルター: 日付 = 今週（月曜〜金曜）
+
+2. Sheetsステップ（メンバーマスタ読み込み）:
+   - シート: メンバーマスタ
+   - 操作: 全行を取得
+
+3. Geminiステップ（週次分析）:
+   今週の提出データを分析し、週次レポートを作成してください。
+
+   入力:
+   - 今週の提出ログ: {weekly_submissions}
+   - メンバーマスタ: {members_data}
+
+   出力形式:
+   ■ 今週のサマリー
+   - 総提出数: X件
+   - 平均提出率: X%
+   - 皆勤賞: （毎日提出した人）
+
+   ■ メンバー別提出率ランキング
+   1. 山田太郎: 100%（5/5日）
+   2. 佐藤花子: 80%（4/5日）
+   ...
+
+   ■ 改善提案
+   - （提出率が低いメンバーへのフォロー提案など）
+
+4. Chat DMステップ:
+   - 自分へ週次レポートを通知
+
+【出力先】
+- Chat DM（自分へ通知）
+
+このエージェントを作成してください。</div>
+            </div>
+
+            <h3 style="font-size: 1.1rem; margin: 2rem 0 1rem; color: var(--text-secondary);">エージェント4: Drive Sync（参考）</h3>
+            <div class="code-block-wrapper">
+                <div class="copy-hint">クリックでコピー</div>
+                <div class="code-block" onclick="copyToClipboard(this)">Drive同期エージェントを作成してください。
+
+【エージェント名】
+Drive同期
+
+【説明】
+日報・週報に添付されたファイルをDriveに自動保存し、提出ログにリンクを記録
+
+【スターター】
+Chat - チャットメッセージを受け取ったとき
+会話の種類: スペースと名前付きグループDM
+スペース: 日報専用スペースまたは週報専用スペース
+※添付ファイルがあるメッセージを対象
+
+【処理フロー】
+1. 条件分岐ステップ:
+   - 添付ファイルがある場合 → 次のステップへ
+   - 添付ファイルがない場合 → 処理終了
+
+2. Driveステップ（ファイル保存）:
+   - 保存先: 日報週報フォルダ/{年}/{月}/
+   - ファイル名: {日付}_{送信者名}_{元のファイル名}
+
+3. Sheetsステップ（リンク記録）:
+   - スプレッドシート: 日報管理シート
+   - シート: 提出ログ
+   - 操作: 該当行のDriveリンク列を更新
+
+【出力先】
+- Drive（ファイル保存）
+- Sheets（リンク記録）
+
+【注意】
+このエージェントは既存の日報要約/週報品質チェックエージェントと併用するか、
+それらのエージェントにDrive保存ステップを追加する形で実装することも可能です。
+
+このエージェントを作成してください。</div>
+            </div>
+
+            <div class="warning-box" style="margin-top: 2rem;">
+                <p><strong>ポイント:</strong> 各プロンプトを個別にコピーして <a href="https://studio.workspace.google.com/" target="_blank" style="color: #78350f; text-decoration: underline;">Google Workspace Studio</a> に貼り付けてください。1つのプロンプトで1つのエージェントが作成されます。</p>
             </div>
         </div>
     </section>
@@ -959,7 +1146,95 @@
         </div>
     </section>
 
-    <section class="section" id="timeline">
+    <section class="section" id="test-data">
+        <div class="section-container">
+            <div class="section-header">
+                <div class="section-label">Test Data</div>
+                <h2 class="section-title">テスト用サンプルデータ</h2>
+                <p class="section-description">「未提出チェック」エージェントをテストするために、以下のデータをスプレッドシートに登録してください。</p>
+            </div>
+
+            <h3 style="font-size: 1rem; margin-bottom: 1rem; color: var(--accent-primary);">メンバーマスタシート</h3>
+            <table class="config-table">
+                <thead>
+                    <tr>
+                        <th>名前</th>
+                        <th>メールアドレス</th>
+                        <th>部署</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>山田太郎</td>
+                        <td>yamada@example.com</td>
+                        <td>営業部</td>
+                    </tr>
+                    <tr>
+                        <td>佐藤花子</td>
+                        <td>sato@example.com</td>
+                        <td>営業部</td>
+                    </tr>
+                    <tr>
+                        <td>鈴木一郎</td>
+                        <td>suzuki@example.com</td>
+                        <td>開発部</td>
+                    </tr>
+                    <tr>
+                        <td>田中美咲</td>
+                        <td>tanaka@example.com</td>
+                        <td>開発部</td>
+                    </tr>
+                    <tr>
+                        <td>高橋健二</td>
+                        <td>takahashi@example.com</td>
+                        <td>総務部</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <h3 style="font-size: 1rem; margin: 2rem 0 1rem; color: var(--accent-primary);">提出ログシート（テスト用：本日分）</h3>
+            <table class="config-table">
+                <thead>
+                    <tr>
+                        <th>日付</th>
+                        <th>名前</th>
+                        <th>提出時刻</th>
+                        <th>ステータス</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>2024-01-15</td>
+                        <td>山田太郎</td>
+                        <td>17:30</td>
+                        <td>提出済</td>
+                    </tr>
+                    <tr>
+                        <td>2024-01-15</td>
+                        <td>佐藤花子</td>
+                        <td>18:15</td>
+                        <td>提出済</td>
+                    </tr>
+                    <tr>
+                        <td>2024-01-15</td>
+                        <td>鈴木一郎</td>
+                        <td>17:45</td>
+                        <td>提出済</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div class="info-box" style="margin-top: 2rem;">
+                <p><strong>期待される結果:</strong> メンバー5名のうち3名が提出済み。未提出者は「田中美咲（開発部）」「高橋健二（総務部）」の2名。提出率は60%。</p>
+            </div>
+
+            <div class="warning-box" style="margin-top: 1rem;">
+                <p><strong>テストのコツ:</strong> Scheduledスターターは指定時刻にならないと動作しません。テスト時は「テスト実行」ボタンを使うか、スターターを一時的に「手動実行」に変更してください。</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="section" id="timeline" style="background: var(--bg-secondary);">
         <div class="section-container">
             <div class="section-header">
                 <div class="section-label">System Flow</div>
