Please provide the diff content for the files.

--- a/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson4.html
+++ b/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson4.html
@@ -902,230 +902,271 @@
             <h3 style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--accent-primary);">エージェント1: 未提出チェック（デモ推奨）</h3>
             <div class="code-block-wrapper">
                 <div class="copy-hint">クリックでコピー</div>
-                <div class="code-block" onclick="copyToClipboard(this)">未提出チェックエージェントを作成してください。
+                <div class="code-block" onclick="copyToClipboard(this)">日報の未提出チェックエージェントを作成してください。
+すべての出力は日本語でお願いします。
 
 【エージェント名】
-未提出チェック
+日報未提出チェック
 
 【説明】
-毎日20:00にスプレッドシートをチェックし、日報未提出者を検知して通知
+毎日20時にスプレッドシートをチェックし、日報未提出者を検知して自分にChat DMで通知します
 
 【スターター】
-Scheduled（スケジュール）- 毎日20:00
+スケジュール - 毎日20:00
 
 【処理フロー】
-1. Sheetsステップ（メンバーマスタ読み込み）:
-   - スプレッドシート: 日報管理シート
-   - シート: メンバーマスタ
-   - 操作: 全行を取得
-   - 取得列: 名前, メールアドレス, 部署
+1. スプレッドシート読み込み（メンバーマスタ）:
+   - 対象シート: 日報管理シート > メンバーマスタ
+   - 操作: すべての行を取得
+   - 取得する列: 名前, メールアドレス, 部署
 
-2. Sheetsステップ（本日の提出ログ読み込み）:
-   - スプレッドシート: 日報管理シート
-   - シート: 提出ログ
+2. スプレッドシート読み込み（本日の提出ログ）:
+   - 対象シート: 日報管理シート > 提出ログ
    - 操作: フィルターして取得
-   - フィルター: 日付 = 本日
+   - 条件: 日付が本日のもの
 
-3. Geminiステップ（未提出者の検知）:
-   メンバーマスタと本日の提出ログを比較し、未提出者を特定してください。
+3. Geminiに聞く（未提出者の特定）:
+   以下のデータを比較して、本日の日報未提出者を特定してください。
 
-   入力データ:
-   - メンバーマスタ: {members_data}
-   - 本日の提出ログ: {today_submissions}
-   - 本日の日付: {current_date}
+   【メンバー一覧】
+   {メンバーマスタのデータ}
 
-   出力形式:
-   - 未提出者リスト（名前、部署）
-   - 提出済み人数 / 全体人数
-   - 提出率（%）
+   【本日の提出済みリスト】
+   {提出ログのデータ}
 
-4. 条件分岐ステップ:
-   - 未提出者がいる場合 → Chat DM通知へ
-   - 全員提出済みの場合 → 処理終了
+   【出力形式】（日本語で出力）
+   ■ 未提出者
+   ・山田太郎（営業部）
+   ・佐藤花子（開発部）
 
-5. Chat DMステップ:
-   - 自分へ未提出者リストと提出率を通知
+   ■ 提出状況
+   ・提出済み: ○名 / 全体: ○名
+   ・提出率: ○○%
+
+   ■ 判定
+   未提出者あり / 全員提出済み
+
+4. 条件分岐:
+   - 「未提出者あり」の場合 → Chat DM通知へ
+   - 「全員提出済み」の場合 → 終了
+
+5. Chat DM送信（自分宛て）:
+   【日報未提出アラート】
+
+   本日の日報未提出者をお知らせします。
+
+   {Geminiの出力結果}
+
+   フォローをお願いします。
 
 【出力先】
-- Chat DM（自分へ通知）
+- 自分へのChat DM
 
-【事前準備】
-1. 日報管理シートに「メンバーマスタ」シートを作成（列: 名前, メールアドレス, 部署）
-2. 日報管理シートに「提出ログ」シートを作成（列: 日付, 名前, 提出時刻, ステータス）
-3. テスト用にメンバー3-5名分のダミーデータを登録
+【事前準備が必要なもの】
+1. 「日報管理シート」という名前のスプレッドシートを作成
+2. その中に「メンバーマスタ」シートを作成（列: 名前, メールアドレス, 部署）
+3. その中に「提出ログ」シートを作成（列: 日付, 名前, 提出時刻, ステータス）
+4. テスト用にメンバー3〜5名分のダミーデータを登録
 
-このエージェントを作成してください。</div>
+このエージェントを日本語で作成してください。</div>
             </div>
 
             <h3 style="font-size: 1.1rem; margin: 2rem 0 1rem; color: var(--text-secondary);">エージェント2: ダッシュボード更新</h3>
             <div class="code-block-wrapper">
                 <div class="copy-hint">クリックでコピー</div>
-                <div class="code-block" onclick="copyToClipboard(this)">ダッシュボード更新エージェントを作成してください。
+                <div class="code-block" onclick="copyToClipboard(this)">日報ダッシュボード更新エージェントを作成してください。
+すべての出力は日本語でお願いします。
 
 【エージェント名】
-ダッシュボード更新
+日報ダッシュボード更新
 
 【説明】
-毎日21:00に本日の提出データを集計し、ダッシュボードシートを自動更新
+毎日21時に本日の提出データを集計し、ダッシュボードシートを自動更新します
 
 【スターター】
-Scheduled（スケジュール）- 毎日21:00
+スケジュール - 毎日21:00
 
 【処理フロー】
-1. Sheetsステップ（提出ログ読み込み）:
-   - スプレッドシート: 日報管理シート
-   - シート: 提出ログ
+1. スプレッドシート読み込み（本日の提出ログ）:
+   - 対象シート: 日報管理シート > 提出ログ
    - 操作: フィルターして取得
-   - フィルター: 日付 = 本日
+   - 条件: 日付が本日のもの
 
-2. Sheetsステップ（メンバーマスタ読み込み）:
-   - シート: メンバーマスタ
+2. スプレッドシート読み込み（メンバーマスタ）:
+   - 対象シート: 日報管理シート > メンバーマスタ
    - 操作: 行数をカウント（全メンバー数を取得）
 
-3. Geminiステップ（集計）:
-   本日の提出データを集計してください。
+3. Geminiに聞く（集計）:
+   本日の日報提出データを集計してください。
 
-   入力:
-   - 本日の提出ログ: {today_submissions}
-   - 全メンバー数: {total_members}
+   【本日の提出ログ】
+   {提出ログのデータ}
 
-   出力:
+   【全メンバー数】
+   {メンバー数}
+
+   【出力形式】（日本語で出力）
+   提出数: ○名
+   提出率: ○○%
+   未提出者数: ○名
+
+4. 抽出:
    - 提出数
-   - 提出率（%）
+   - 提出率
    - 未提出者数
-   - 平均提出時刻
 
-4. 抽出ステップ:
-   - submission_count: 提出数
-   - submission_rate: 提出率
-   - missing_count: 未提出者数
-
-5. Sheetsステップ（ダッシュボード更新）:
-   - シート: ダッシュボード
+5. スプレッドシート書き込み（ダッシュボード更新）:
+   - 対象シート: 日報管理シート > ダッシュボード
    - 操作: 行を追加
-   - データ: 日付, 提出数, 提出率, 未提出者数
+   - 追加データ: 日付, 提出数, 提出率, 未提出者数
 
 【出力先】
-- Sheets（ダッシュボードシート）
+- スプレッドシート（ダッシュボードシート）
 
-このエージェントを作成してください。</div>
+このエージェントを日本語で作成してください。</div>
             </div>
 
             <h3 style="font-size: 1.1rem; margin: 2rem 0 1rem; color: var(--text-secondary);">エージェント3: 週次サマリー</h3>
             <div class="code-block-wrapper">
                 <div class="copy-hint">クリックでコピー</div>
-                <div class="code-block" onclick="copyToClipboard(this)">週次サマリーエージェントを作成してください。
+                <div class="code-block" onclick="copyToClipboard(this)">日報の週次サマリーエージェントを作成してください。
+すべての出力は日本語でお願いします。
 
 【エージェント名】
-週次サマリー
+日報週次サマリー
 
 【説明】
-毎週金曜18:00に今週の提出データを分析し、週次レポートを生成
+毎週金曜18時に今週の提出データを分析し、週次レポートを自分にChat DMで通知します
 
 【スターター】
-Scheduled（スケジュール）- 毎週金曜日 18:00
+スケジュール - 毎週金曜日 18:00
 
 【処理フロー】
-1. Sheetsステップ（今週の提出ログ読み込み）:
-   - スプレッドシート: 日報管理シート
-   - シート: 提出ログ
+1. スプレッドシート読み込み（今週の提出ログ）:
+   - 対象シート: 日報管理シート > 提出ログ
    - 操作: フィルターして取得
-   - フィルター: 日付 = 今週（月曜〜金曜）
+   - 条件: 日付が今週（月曜〜金曜）のもの
 
-2. Sheetsステップ（メンバーマスタ読み込み）:
-   - シート: メンバーマスタ
-   - 操作: 全行を取得
+2. スプレッドシート読み込み（メンバーマスタ）:
+   - 対象シート: 日報管理シート > メンバーマスタ
+   - 操作: すべての行を取得
 
-3. Geminiステップ（週次分析）:
-   今週の提出データを分析し、週次レポートを作成してください。
+3. Geminiに聞く（週次分析）:
+   今週の日報提出データを分析し、週次レポートを作成してください。
 
-   入力:
-   - 今週の提出ログ: {weekly_submissions}
-   - メンバーマスタ: {members_data}
+   【今週の提出ログ】
+   {提出ログのデータ}
 
-   出力形式:
+   【メンバー一覧】
+   {メンバーマスタのデータ}
+
+   【出力形式】（日本語で出力）
    ■ 今週のサマリー
-   - 総提出数: X件
-   - 平均提出率: X%
-   - 皆勤賞: （毎日提出した人）
+   ・総提出数: ○件
+   ・平均提出率: ○○%
+   ・皆勤賞: （毎日提出した人の名前）
 
    ■ メンバー別提出率ランキング
-   1. 山田太郎: 100%（5/5日）
-   2. 佐藤花子: 80%（4/5日）
+   1位: 山田太郎 - 100%（5/5日）
+   2位: 佐藤花子 - 80%（4/5日）
    ...
 
-   ■ 改善提案
-   - （提出率が低いメンバーへのフォロー提案など）
+   ■ 要フォロー
+   ・提出率80%未満のメンバーとフォロー提案
 
-4. Chat DMステップ:
-   - 自分へ週次レポートを通知
+   ■ 改善提案
+   ・チーム全体の傾向と改善点
+
+4. Chat DM送信（自分宛て）:
+   【週次日報サマリー】
+
+   今週の日報提出状況をお知らせします。
+
+   {Geminiの出力結果}
 
 【出力先】
-- Chat DM（自分へ通知）
+- 自分へのChat DM
 
-このエージェントを作成してください。</div>
+このエージェントを日本語で作成してください。</div>
             </div>
 
-            <h3 style="font-size: 1.1rem; margin: 2rem 0 1rem; color: var(--text-secondary);">エージェント4: Drive Sync + ファイル内容読み取り（参考）</h3>
+            <h3 style="font-size: 1.1rem; margin: 2rem 0 1rem; color: var(--text-secondary);">エージェント4: 添付ファイル保存＆内容確認（参考）</h3>
             <div class="code-block-wrapper">
                 <div class="copy-hint">クリックでコピー</div>
-                <div class="code-block" onclick="copyToClipboard(this)">Drive同期＆ファイル内容読み取りエージェントを作成してください。
+                <div class="code-block" onclick="copyToClipboard(this)">添付ファイル保存＆内容確認エージェントを作成してください。
+すべての出力は日本語でお願いします。
 
 【エージェント名】
-Drive同期＆内容確認
+添付ファイル保存＆内容確認
 
 【説明】
-メールに添付されたファイルをDriveに自動保存し、Geminiでファイル内容を読み取って要約
+メールに添付されたファイルをGoogleドライブに自動保存し、Geminiでファイル内容を読み取って要約します
 
 【スターター】
 Gmail - 新しいメールを受信したとき
-フィルター: 添付ファイルがあるメール
+条件: 添付ファイルがあるメール
 
 【処理フロー】
-1. 条件分岐ステップ:
+1. 条件分岐:
    - 添付ファイルがある場合 → 次のステップへ
-   - 添付ファイルがない場合 → 処理終了
+   - 添付ファイルがない場合 → 終了
 
-2. Driveステップ（ファイル保存）:
-   - 保存先: 日報週報フォルダ/{年}/{月}/
+2. Googleドライブに保存:
+   - 保存先フォルダ: 日報週報フォルダ/{年}/{月}/
    - ファイル名: {日付}_{送信者名}_{元のファイル名}
    - ※このステップで{Drive links}変数が生成されます
 
-3. Geminiステップ（ファイル内容の読み取り）:
-   以下のファイルを開いて、内容を要約してください。
+3. Geminiに聞く（ファイル内容の読み取り）:
+   以下のファイルを開いて、内容を日本語で要約してください。
 
    ファイル: {Drive links}
 
-   要約項目:
-   - ファイルの種類（報告書/資料/その他）
-   - 主な内容（3行以内）
-   - 重要なポイント
-   - 対応が必要な事項があれば記載
+   【出力形式】（日本語で出力）
+   ■ ファイル種類
+   報告書 / 資料 / その他
+
+   ■ 内容の要約（3行以内）
+   ・...
+   ・...
+   ・...
+
+   ■ 重要なポイント
+   ・...
+
+   ■ 対応が必要な事項
+   ・あれば記載、なければ「特になし」
 
    ※「開いて」というキーワードと{Drive links}変数を組み合わせることで、
    Geminiがファイルの中身を読み取って分析できます。
 
-4. Sheetsステップ（リンク・要約記録）:
-   - スプレッドシート: 日報管理シート
-   - シート: 提出ログ
+4. スプレッドシート書き込み（記録）:
+   - 対象シート: 日報管理シート > 提出ログ
    - 操作: 行を追加
-   - データ: 日付, 送信者, Driveリンク, ファイル要約
+   - 追加データ: 日付, 送信者, Driveリンク, ファイル要約
 
-5. Chat DMステップ（通知）:
-   - 自分へファイル保存完了と要約を通知
+5. Chat DM送信（自分宛て）:
+   【添付ファイル保存完了】
+
+   以下のファイルをGoogleドライブに保存しました。
+
+   ■ 送信者: {送信者}
+   ■ 保存先: {Driveリンク}
+
+   ■ ファイル内容の要約
+   {Geminiの出力結果}
 
 【出力先】
-- Drive（ファイル保存）
-- Sheets（リンク・要約記録）
-- Chat DM（通知）
+- Googleドライブ（ファイル保存）
+- スプレッドシート（リンク・要約記録）
+- 自分へのChat DM
 
 【重要なTips】
 添付ファイルの内容をGeminiに読み取らせるには:
-1. まずDriveステップでファイルを保存し{Drive links}変数を取得
-2. Geminiステップで「開いて」キーワードと共に{Drive links}を使用
-3. これによりGeminiがファイルを開いて内容を分析可能
+1. まずGoogleドライブに保存して{Drive links}変数を取得
+2. Geminiに聞くステップで「開いて」キーワードと{Drive links}を使用
+3. これによりGeminiがファイルを開いて内容を分析できます
 
-このエージェントを作成してください。</div>
+このエージェントを日本語で作成してください。</div>
             </div>
 
             <div class="warning-box" style="margin-top: 2rem;">
@@ -1516,38 +1557,40 @@ Gmail - 新しいメールを受信したとき
 
             <div class="code-block-wrapper">
                 <div class="copy-hint">クリックでコピー</div>
-                <div class="code-block" onclick="copyToClipboard(this)">You are checking daily report submissions.
+                <div class="code-block" onclick="copyToClipboard(this)">日報の提出状況をチェックしてください。
 
-Today's date: {current_date}
-Deadline: 17:00
+【本日の日付】
+{current_date}
 
-Member list (required to submit daily report):
+【提出期限】
+17:00
+
+【メンバー一覧】（日報提出が必要なメンバー）
 {member_list}
 
-Today's submissions from log:
+【本日の提出ログ】
 {today_submissions}
 
-Identify:
-1. Members who have NOT submitted today's report
-2. Members who submitted LATE (after 17:00)
+以下を特定してください:
+1. 本日の日報を提出していないメンバー
+2. 遅延提出したメンバー（17:00以降に提出）
 
-Output format:
+【出力形式】（日本語で出力）
 ---
-MISSING_SUBMISSIONS:
-- {member_name} ({email})
-- {member_name} ({email})
+■ 未提出者
+・山田太郎（yamada@example.com）
+・佐藤花子（sato@example.com）
 
-LATE_SUBMISSIONS:
-- {member_name} - submitted at {time}
+■ 遅延提出者
+・鈴木一郎 - 18:30に提出
 
-SUMMARY:
-- Total required members: {count}
-- Submitted on time: {count}
-- Submitted late: {count}
-- Missing: {count}
-- Submission rate: {percentage}%
----
-Output in Japanese.</div>
+■ 本日の提出状況
+・対象者数: ○名
+・定時提出: ○名
+・遅延提出: ○名
+・未提出: ○名
+・提出率: ○○%
+---</div>
             </div>
         </div>
     </section>
@@ -1590,26 +1633,45 @@ Output in Japanese.</div>
 
             <div class="code-block-wrapper">
                 <div class="copy-hint">クリックでコピー</div>
-                <div class="code-block" onclick="copyToClipboard(this)">You are generating a weekly submission summary.
+                <div class="code-block" onclick="copyToClipboard(this)">今週の日報提出状況をまとめた週次サマリーを作成してください。
 
-Week period: {week_start} 〜 {week_end}
+【対象期間】
+{week_start} 〜 {week_end}
 
-This week's submission data:
+【今週の提出ログ】
 {weekly_submission_log}
 
-Member list:
+【メンバー一覧】
 {member_list}
 
-Generate a summary including:
-1. 週次提出率（日報・週報別）
-2. 提出率ランキング（上位3名を表彰）
-3. 要フォロー（提出率80%未満のメンバー）
-4. 前週との比較（改善 or 悪化）
-5. チーム全体の傾向分析
-6. 改善提案（if any）
+以下の項目を含めてサマリーを作成してください:
 
-Output in Japanese, formatted for Chat message.
-Keep it concise but informative.</div>
+【出力形式】（日本語で出力）
+---
+■ 今週のサマリー
+・総提出数: ○件
+・平均提出率: ○○%
+
+■ 提出率ランキング（上位3名）
+1位: 山田太郎 - 100%（5/5日）
+2位: 佐藤花子 - 80%（4/5日）
+3位: 鈴木一郎 - 60%（3/5日）
+
+■ 皆勤賞
+・毎日提出した人の名前
+
+■ 要フォロー（提出率80%未満）
+・田中美咲 - 40%（2/5日）
+・高橋健二 - 20%（1/5日）
+
+■ チーム全体の傾向
+・（傾向の分析を記載）
+
+■ 改善提案
+・（改善案があれば記載）
+---
+
+Chatメッセージ用に簡潔にまとめてください。</div>
             </div>
         </div>
     </section>
